@@ -29,38 +29,87 @@ import java.time.Instant;
 import java.util.*;
 
 public class JavaSvc {
+
     static final ObjectMapper M = new ObjectMapper();
 
-    static Map<String, String> loadRootEnv() {
+    // ---------- dotenv loading ----------
+    static boolean exists(String p) {
         try {
-            Path root = Paths.get("").toAbsolutePath().getParent(); // java-svc 的上一级
-            List<String> lines = Files.readAllLines(root.resolve(".env"), StandardCharsets.UTF_8);
-            Map<String, String> env = new HashMap<>();
-            for (String line : lines) {
-                String s = line.trim();
-                if (s.isEmpty() || s.startsWith("#") || !s.contains("=")) continue;
-                String[] kv = s.split("=", 2);
-                env.put(kv[0].trim(), kv[1].trim());
-            }
-            return env;
+            return p != null && !p.isBlank() && Files.exists(Path.of(p)) && !Files.isDirectory(Path.of(p));
         } catch (Exception e) {
-            return Map.of();
+            return false;
         }
+    }
+
+    static String quote(String s) {
+        return s == null ? "null" : "\"" + s + "\"";
+    }
+
+    /**
+     * 容器优先从 /app/.env 读（Dockerfile 会 COPY 根目录 .env 到这里）
+     * 可通过 DOTENV_PATH 覆盖。
+
+     */
+    static Map<String, String> loadEnv() {
+        String dotenv = System.getenv().getOrDefault("DOTENV_PATH", "/app/.env");
+        List<String> candidates = List.of(dotenv, ".env", "../.env");
+
+        System.out.println("[java] env candidates:");
+        for (String p : candidates) {
+            System.out.println("  - " + p + " (exists=" + exists(p) + ")");
+        }
+
+        Map<String, String> env = new HashMap<>();
+        env.putAll(System.getenv()); // 先放入进程环境变量
+
+        // 文件覆盖 env（符合你“打包进镜像必须生效”的诉求）
+        for (String p : candidates) {
+            if (!exists(p)) continue;
+            try {
+                List<String> lines = Files.readAllLines(Path.of(p), StandardCharsets.UTF_8);
+                for (String line : lines) {
+                    String s = line.trim();
+                    if (s.isEmpty() || s.startsWith("#") || !s.contains("=")) continue;
+                    String[] kv = s.split("=", 2);
+                    env.put(kv[0].trim(), kv[1].trim());
+                }
+                System.out.println("[java] loaded env file: " + p);
+                break;
+            } catch (Exception e) {
+                System.out.println("[java] failed to read " + p + ": " + e);
+            }
+        }
+
+        System.out.println("[java] effective OTEL_EXPORTER_OTLP_ENDPOINT=" + quote(env.get("OTEL_EXPORTER_OTLP_ENDPOINT")));
+        System.out.println("[java] effective JAVA_PORT=" + quote(env.getOrDefault("JAVA_PORT", "8082")));
+        System.out.println("[java] effective CPP_URL=" + quote(env.get("CPP_URL")));
+        return env;
+    }
+
+    // ---------- OTEL ----------
+    static Map<String, String> parseHeaders(String headers) {
+        Map<String, String> out = new HashMap<>();
+        if (headers == null) return out;
+        for (String part : headers.split(",")) {
+            String p = part.trim();
+            if (p.isEmpty() || !p.contains("=")) continue;
+            String[] kv = p.split("=", 2);
+            out.put(kv[0].trim(), kv[1].trim());
+        }
+        return out;
     }
 
     static OpenTelemetry initOtel(Map<String, String> env) {
         String endpoint = env.getOrDefault("OTEL_EXPORTER_OTLP_ENDPOINT", "");
-        // headers 允许为空（HTTP adapt_URL 模式不需要）
         String headers = env.getOrDefault("OTEL_EXPORTER_OTLP_HEADERS", "");
 
         if (endpoint.isEmpty()) {
-            throw new RuntimeException("missing OTEL_EXPORTER_OTLP_ENDPOINT in .env");
+            throw new RuntimeException("missing OTEL_EXPORTER_OTLP_ENDPOINT");
         }
 
         OtlpHttpSpanExporter.Builder exporterBuilder = OtlpHttpSpanExporter.builder()
                 .setEndpoint(endpoint);
 
-        // 如果你未来切到需要 header 的模式，这里也支持
         Map<String, String> headerMap = parseHeaders(headers);
         if (headerMap.containsKey("Authentication") && !headerMap.get("Authentication").isEmpty()) {
             exporterBuilder.addHeader("Authentication", headerMap.get("Authentication"));
@@ -85,35 +134,28 @@ public class JavaSvc {
         return otel;
     }
 
-    static Map<String, String> parseHeaders(String headers) {
-        Map<String, String> out = new HashMap<>();
-        if (headers == null) return out;
-        for (String part : headers.split(",")) {
-            String p = part.trim();
-            if (p.isEmpty() || !p.contains("=")) continue;
-            String[] kv = p.split("=", 2);
-            out.put(kv[0].trim(), kv[1].trim());
-        }
-        return out;
-    }
-
     static String traceIdFromContext(Context ctx) {
         Span span = Span.fromContext(ctx);
         SpanContext sc = span.getSpanContext();
         return sc.isValid() ? sc.getTraceId() : "";
     }
 
+    // ---------- HTTP server ----------
     public static void main(String[] args) throws Exception {
-        Map<String, String> env = loadRootEnv();
+        Map<String, String> env = loadEnv();
         OpenTelemetry otel = initOtel(env);
 
         int port = Integer.parseInt(env.getOrDefault("JAVA_PORT", "8082"));
-        String cppUrl = env.getOrDefault("CPP_URL", "http://127.0.0.1:8083");
+        String cppUrl = env.getOrDefault("CPP_URL", "");
+
+        if (cppUrl.isEmpty()) {
+            System.out.println("[java] WARN: CPP_URL is empty; downstream call will be skipped");
+        }
 
         TextMapPropagator propagator = otel.getPropagators().getTextMapPropagator();
         Tracer tracer = otel.getTracer("java-svc");
 
-        HttpServer server = HttpServer.create(new InetSocketAddress("127.0.0.1", port), 0);
+        HttpServer server = HttpServer.create(new InetSocketAddress("0.0.0.0", port), 0);
 
         server.createContext("/java/work", exchange -> {
             Context extracted = propagator.extract(Context.current(), exchange, new HttpExchangeGetter());
@@ -124,22 +166,25 @@ public class JavaSvc {
 
             try (Scope scope = serverSpan.makeCurrent()) {
                 String tid = traceIdFromContext(Context.current());
-                System.out.println("[java] /java/work trace_id=" + tid);
+                String tpIn = exchange.getRequestHeaders().getFirst("traceparent");
+                System.out.println("[java] /java/work trace_id=" + tid + " traceparent_in=" + (tpIn == null ? "" : tpIn));
 
-                HttpClient client = HttpClient.newHttpClient();
-                HttpRequest.Builder reqB = HttpRequest.newBuilder()
-                        .uri(URI.create(cppUrl + "/cpp/work"))
-                        .GET();
+                Map<String, Object> cppResp = Map.of("warn", "CPP_URL is empty");
+                if (!cppUrl.isEmpty()) {
+                    HttpClient client = HttpClient.newHttpClient();
+                    HttpRequest.Builder reqB = HttpRequest.newBuilder()
+                            .uri(URI.create(cppUrl + "/cpp/work"))
+                            .GET();
 
-                // 注入 traceparent 等 header 到下游
-                propagator.inject(Context.current(), reqB, (builder, key, value) -> builder.header(key, value));
+                    //  注入 traceparent / tracestate
+                    propagator.inject(Context.current(), reqB, (builder, key, value) -> builder.header(key, value));
 
-                Map<String, Object> cppResp;
-                try {
-                    HttpResponse<String> resp = client.send(reqB.build(), HttpResponse.BodyHandlers.ofString());
-                    cppResp = M.readValue(resp.body(), Map.class);
-                } catch (Exception e) {
-                    cppResp = Map.of("error", e.toString());
+                    try {
+                        HttpResponse<String> resp = client.send(reqB.build(), HttpResponse.BodyHandlers.ofString());
+                        cppResp = M.readValue(resp.body(), Map.class);
+                    } catch (Exception e) {
+                        cppResp = Map.of("error", e.toString());
+                    }
                 }
 
                 Map<String, Object> out = new LinkedHashMap<>();
